syntax = "proto3";

package com.smartagri.illuminate;

option java_multiple_files = true;
option java_package = "grpc.IlluminateService";
option java_outer_classname = "IlluminateProto";

service IrrigationService {
  rpc StartIrrigation(stream IluminateRequest) returns (stream IlluminateResponse);

}

message IluminateRequest {
  string farm_id = 1;
  string zone_id = 2;
  string duration = 3;
}

message IlluminateResponse {
  bool success = 1;
  string message = 2;
}
